fixed the size of the screen and overlapping elements

--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -4,8 +4,7 @@ html {
 }
 
 footer{
-    background-color: lightslategray;
-    height: 200px;
+    height: 100px;
     margin-top: auto;
 }
 
@@ -56,7 +55,7 @@ h2 {
 
 .BackButton {
     min-width: 300px;
-    min-height: 100px;
+    max-height: 60px;
     background-color: rgb(189,189,189);
     margin: 3%;
     font-size: xx-large;
@@ -94,13 +93,13 @@ h2 {
 
 #kitchenOverviewContent {
     width: 94%;
-    min-height: 550px;
+    min-height: 450px;
     border-style: solid;
     border-color: white;
     margin: 3%;
     background-color: rgb(63, 63, 63);
     overflow: scroll;
-    max-height: 600px;
+    max-height: 400px;
 }
 
 #kitchenOverviewBack {
@@ -108,6 +107,7 @@ h2 {
     margin: 3%;
     border-style: solid;
     border-color: white;
+    max-height: 100px;
 }
 
 /* William css */
